# Ejemplo-exposici-n-POO

./: CMakeLists.txt
.github/workflows/: ci.yml
src/: suma.cpp  suma.h
test/: test_suma.cpp
